<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.octaviocervantes.mypetcare.AcercaDesarrollador">

    <include android:id="@+id/actionBarMascota"
        layout="@layout/actionbar_mascota">
    </include>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/imgLogoSize"
        android:layout_height="@dimen/imgLogoSize"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dog_house_48"
        android:layout_marginTop="@dimen/marginCircle"
        android:layout_gravity="center"
        android:layout_below="@id/actionBarMascota"
        />

    <TextView
        android:id="@+id/txtAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTitulo"
        android:textSize="@dimen/sizeAcerca"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgLogo"/>

    <TextView
        android:id="@+id/txtDesarrollado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tDesarrollo"
        android:layout_marginTop="@dimen/marginTextView"
        android:layout_marginStart="@dimen/marginTextView"
        android:textStyle="bold"
        android:textSize="@dimen/sizeTextView"
        android:layout_below="@id/txtAcercaDe"
        android:layout_marginLeft="@dimen/marginTextView" />

    <TextView
        android:id="@+id/txtNombreDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tDesarrollador"
        android:textSize="@dimen/sizeTextView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtDesarrollado"/>

    <TextView
        android:id="@+id/txtContactoDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tContacto"
        android:layout_marginTop="@dimen/marginTextView"
        android:layout_marginLeft="@dimen/marginTextView"
        android:layout_marginStart="@dimen/marginTextView"
        android:textStyle="bold"
        android:textSize="@dimen/sizeTextView"
        android:layout_below="@id/txtNombreDesarrollador"/>

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tCorreo"
        android:textSize="@dimen/sizeTextView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtContactoDes"/>

    <TextView
        android:id="@+id/txtBiografia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTextView"
        android:layout_marginLeft="@dimen/marginTextView"
        android:layout_marginStart="@dimen/marginTextView"
        android:text="@string/tBiografia"
        android:textSize="@dimen/sizeTextView"
        android:layout_below="@id/txtCorreo"/>

    <TextView
        android:id="@+id/txtCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginLastTextView"
        android:textStyle="bold"
        android:textSize="@dimen/sizeTextView"
        android:text="@string/tCurso"
        android:layout_below="@id/txtBiografia"/>

</RelativeLayout>
