<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="mx.octaviocervantes.mypetcare.LoginUsuario">

    <include android:id="@+id/actionBarMascota"
        layout="@layout/actionbar_mascota">
    </include>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dog_house_48"
        android:layout_marginTop="@dimen/marginCircle"
        android:layout_gravity="center"
        android:layout_below="@id/actionBarMascota"
        />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTitulo"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sizeAcerca"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvUsuarioActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Usuario conectado: "
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/marLefT"
        android:layout_marginRight="@dimen/marLefT"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/marLefT"
        android:layout_marginRight="@dimen/marLefT"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sUsuario"
            android:inputType="text"
           />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_marginTop="100dp"
        android:theme="@style/estiloBoton"
        android:layout_marginLeft="@dimen/marLefT"
        android:layout_marginRight="@dimen/marLefT"
        android:onClick="buscarUsuarioInstagram"/>
</LinearLayout>
